first tab aligned correctly in grid

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -140,6 +140,14 @@ img {
     border-bottom: var(--primary-color) 4px solid;
 }
 
+#tab-1-content .tab-1-content-inner {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 2rem;
+    align-items: center;
+    justify-content: center;
+}
+
 /* Container */
 
 .container {
